@@ -78,6 +78,12 @@
             <version>${fabric8.kubernetes.client.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-api</artifactId>
+            <version>${fabric8.kubernetes.api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
@@ -127,15 +133,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.19.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/*.java</include>
-                    </includes>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*.java</include>
+                            </includes>
+                            <forkCount>3</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -284,7 +300,8 @@
     <properties>
         <mvn.processor.plugin.version>2.2.4</mvn.processor.plugin.version>
         <ballerina.version>0.970.0-alpha1-SNAPSHOT</ballerina.version>
-        <fabric8.kubernetes.client.version>3.1.8</fabric8.kubernetes.client.version>
+        <fabric8.kubernetes.client.version>3.1.10</fabric8.kubernetes.client.version>
+        <fabric8.kubernetes.api.version>3.0.11</fabric8.kubernetes.api.version>
         <fabric8.kubernetes.api.version>3.0.8</fabric8.kubernetes.api.version>
         <docker.client.version>1.3.1</docker.client.version>
         <jackson.core.version>2.9.4</jackson.core.version>
